# decision-ledger

./: .gitignore  ARCHITECTURE_WALKTHROUGH.md  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_huddle_support.py
backend/app/: config.py  main.py
backend/app/ai/: detector.py  embeddings.py  extractor.py  prompts.py  synthesizer.py
backend/app/api/: __init__.py  analytics.py  decisions.py  schemas.py  search.py  workspace.py
backend/app/auth/: __init__.py  middleware.py  oauth.py
backend/app/db/: models.py
backend/app/integrations/github/: client.py  references.py
backend/app/integrations/jira/: client.py  references.py
backend/app/jobs/: tasks.py  worker.py
backend/app/search/: engine.py  query_handler.py
backend/app/slack/: __init__.py  client.py  commands.py  events.py  interactive.py  messages.py  verify.py
backend/scripts/: check_env.py  seed_demo.py
backend/tests/: test_api.py  test_detection.py  test_references.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/decisions/: page.tsx
frontend/src/app/dashboard/search/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/lib/: api.ts  types.ts
